src/objects/API_Service_Log__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serialized_Request__c</fullName>
        <description>json serialized request</description>
        <label>Serialized Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Serialized_Response__c</fullName>
        <description>JSON serialized Response</description>
        <label>Serialized Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>API Service Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Serialized_Request__c</columns>
        <columns>Method__c</columns>
        <columns>Body__c</columns>
        <columns>URL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Method__c</field>
            <operation>equals</operation>
            <value>POST</value>
        </filters>
        <label>Posts</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Body__c</columns>
        <columns>Method__c</columns>
        <columns>URL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>API-{000000000}</displayFormat>
        <label>Api_Service_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Service Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>